# wampcc

./: #NexioServer.h#  #client_service.cc#  .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  Callbacks.cc  Callbacks.h  Common.h  IOHandle.cc  IOHandle.h  IOLoop.cc  IOLoop.h  LICENSE  Logger.cc  Logger.h  Makefile.am  NexioServer.cc  NexioServer.h  Notes.txt  README  README.md  SID.cc  SID.h  Session.cc  Session.cc.old  Session.h  SessionListener.h  SessionMan.cc  SessionMan.h  Table.cc  Table.h  Topic.cc  Topic.h  TopicMan.cc  TopicMan.h  WampTypes.h  admin.cc  autotools_clean.sh  autotools_setup.sh  (+54 more)
cmake/: CMakeLists.txt  FindJansson.cmake  FindLibUV.cmake  FindLibuv.cmake  MakeDebPackages.cmake  PlatformCheck.cmake  config.h  config.h.incmake  wampcc.pc.incmake  wampccConfig.cmake.in  wampcc_json.pc.incmake
deprecated/: Client.cc  (+2 more)
examples/: CMakeLists.txt  Makefile.am  README.md  connect.cc  examples.makefile  makefile  server.crt  server.key
examples/authentication/: authentication_router.cc  basic_authentication_provider.cc  external_authentication_provider.cc  ticket_authentication_provider.cc  ticket_caller.cc
examples/authorization/: basic_authorization_provider.cc  disclose_authorization_provider.cc  disclose_callee.cc  disclose_caller.cc  disclose_publisher.cc  disclose_subscriber.cc
examples/basic/: basic_async_callee.cc  basic_callee.cc  basic_callee_ssl.cc  basic_caller.cc  basic_embedded_router.cc  basic_publisher.cc  basic_server.cc  basic_subscriber.cc  callee.cc  check_libuv_versions.cc  demo.cc  demo_client.cc  demo_embedded_router.cc  demo_embedded_router_ssl.cc
examples/basic_callee/: callee.cc  makefile
examples/basic_publisher/: basic_publisher.cc
examples/data_models/: model_publisher.cc
examples/hello/: hello.cc  makefile
examples/interact/: Makefile.am  example.cc
examples/json/: basic_json.cc
examples/manual_tests/: Makefile.am  hello.cc  memtest.cc  test_encode_decode.cc
examples/message_server/: message_server  message_server.cc  message_subscriber.cc
examples/ssl_socket/: ssl_client.cc  ssl_server.cc
examples/tester/: wampcc_tester.cc
examples/wamp_router/: router.cc
include/: Makefile.am
include/wampcc/: helper.h  http_parser.h  io_loop.h  kernel.h  log_macros.h  platform.h  protocol.h  pubsub_man.h  rawsocket_protocol.h  rpc_man.h  socket_address.h  ssl.h  ssl_socket.h  tcp_socket.h  types.h  utils.h  version.h  wamp_router.h  wamp_session.h  wampcc.h  websocket_protocol.h
lib/: Makefile.am  admin.cc  data_model.cc  dealer_service.cc  error.cc  event_loop.cc  example_models.cc  http_parser.cc  io_connector.cc  io_handle.cc  io_loop.cc  kernel.cc  platform.cc  pre_session.cc  protocol.cc  pubsub_man.cc  rawsocket_protocol.cc  rpc_man.cc  ssl.cc  ssl_socket.cc  tcp_socket.cc  topic.cc  utils.cc  wamp_connector.cc  wamp_router.cc  wamp_session.cc  websocket_protocol.cc  websocketpp_impl.cc
lib/XXX/: data_model.h  dealer_service.h  error.h  event_loop.h  example_models.h  http_parser.h  io_connector.h  io_handle.h  io_listener.h  io_loop.h  kernel.h  pre_session.h  protocol.h  pubsub_man.h  rawsocket_protocol.h  rpc_man.h  tcp_socket.h  topic.h  types.h  utils.h  wamp_connector.h  wamp_router.h  wamp_session.h  websocket_protocol.h
lib/wampcc/: data_model.h  error.h  event_loop.h  http_parser.h  io_loop.h  kernel.h  log_macros.h  platform.h  protocol.h  pubsub_man.h  rawsocket_protocol.h  rpc_man.h  ssl.h  ssl_socket.h  tcp_socket.h  types.h  utils.h  version.h  wamp_router.h  wamp_session.h  wampcc.h  websocket_protocol.h  websocketpp_impl.h
libs/json/: CMakeLists.txt  Makefile.am  msgpack_serialiser.cc
libs/wampcc/: CMakeLists.txt  Makefile.am  data_model.cc  event_loop.cc  helper.cc  http_parser.cc  io_loop.cc  kernel.cc  platform.cc  protocol.cc  pubsub_man.cc  rawsocket_protocol.cc  rpc_man.cc  socket_address.cc  ssl.cc  ssl_socket.cc  tcp_socket.cc  utils.cc  wamp_router.cc  wamp_session.cc  websocket_protocol.cc
src/: Makefile.am  admin.cc  client.cc  event_loop.cc  io_connector.cc  io_loop.cc  jalson.cc  json_pointer.cc  json_pointer.h  kernel.cc  msgpack.cc  msgpack.h  msgpack_serialiser.cc  pubsub_man.cc  rpc_man.cc  test_short_session.cc  utils.cc  vendor_jansson.cc  vendors.cc  wamp_session.cc
src/XXX/: io_connector.h  kernel.h  rpc_man.h  topic.h
src/jalson/: jalson.h  jalson_internals.h
src/wampcc/: json.h  json_internals.h
test/: Makefile.am  auth.py  basic_client.py  client.py  client_abort_during_handshake.py  client_bad_logon_empty_realm.py  client_does_not_complete_handshake.py  client_immediate_disconnect.py  client_sends_bad_message.py  mini_test.h  run_test_suite.sh  server_reject.py  test_basic_codecs.cc  test_common.h  test_connect_timeout.cc  test_dealer_disconnect_when_has_connections.cc  test_early_wamp_session_destructor.cc  test_evthread_wamp_session_destructor.cc  test_late_dealer_destructor.cc  test_late_wamp_session_descructor.cc  test_late_wamp_session_destructor.cc  test_misc.cc  test_router_functions.cc  test_send_and_close.cc  test_tcp_socket.cc  test_tcp_socket_connect.cc  test_tcp_socket_connect_cb.cc  test_tcp_socket_listen.cc  test_tcp_socket_passive_disconnect.cc  test_unused_wamp_connector.cc  test_wamp_rpc.cc  test_wamp_session_fast_close.cc  wamplite.py
tests/: CMakeLists.txt  Makefile.am  extra.json  test_basic_jalson.cc  test_json_patch.cc  test_json_patch2.cc  test_json_pointer.cc  test_msgpack.cc  test_single_functions.cc  tests.json
tests/json/: Makefile.am  test_basic_jalson.cc  test_json_patch.cc  test_json_patch2.cc  test_json_pointer.cc  test_msgpack.cc  test_single_functions.cc
tests/wampcc/: Makefile.am  client_abort_during_handshake.py  mini_test.h  run_test_suite.sh  test_basic_codecs.cc  test_common.h  test_connect_timeout.cc  test_early_wamp_session_destructor.cc  test_late_wamp_session_destructor.cc  test_misc.cc  test_register_unregister.cc  test_send_and_close.cc  test_tcp_socket_connect.cc  test_tcp_socket_listen.cc  test_wamp_rpc.cc  test_wamp_session_fast_close.cc  wamplite.py
utils/: CMakeLists.txt  Makefile.am  admin.cc
(+52 files in other folders)
