# The ACLOCAL_AMFLAGS variable is a requirement of using a macro
# sub-directory. According to the Automake documentation, this variable should
# be defined in the top-level Makefile.am file of any project that uses
# AC_CONFIG_MACRO_DIR in its configure.ac file. These flags indicate to
# aclocal where it should look for macro files when it's executed by rules
# defined in Makefile.am.
ACLOCAL_AMFLAGS = -I m4

SUBDIRS = lib src test
