# Install wampcc_json headers
wampcc_json_headers_dir = $(includedir)/wampcc
wampcc_json_headers__HEADERS = wampcc/json.h wampcc/json_internals.h

# Install wampcc headers
wampcc_headers_dir = $(includedir)/wampcc
wampcc_headers__HEADERS = wampcc/types.h wampcc/kernel.h wampcc/wamp_session.h	\
wampcc/wamp_router.h wampcc/protocol.h wampcc/rawsocket_protocol.h				\
wampcc/websocket_protocol.h wampcc/tcp_socket.h wampcc/data_model.h				\
wampcc/error.h wampcc/wampcc.h wampcc/ssl_socket.h wampcc/version.h				\
wampcc/helper.h wampcc/socket_address.h
