# Install wampcc_json headers
wampcc_json_headers_dir = $(includedir)/wampcc
wampcc_json_headers__HEADERS = wampcc/json.h wampcc/json_internals.h

# Install wampcc headers
wampcc_headers_dir = $(includedir)/wampcc
wampcc_headers__HEADERS = wampcc/types.h wampcc/kernel.h wampcc/wamp_session.h	\
wampcc/wamp_router.h wampcc/protocol.h wampcc/rawsocket_protocol.h				\
wampcc/websocket_protocol.h wampcc/tcp_socket.h wampcc/data_model.h				\
wampcc/error.h wampcc/wampcc.h wampcc/ssl_socket.h wampcc/version.h				\
wampcc/helper.h wampcc/socket_address.h

EXTRA_DIST=wampcc/data_model.h wampcc/error.h wampcc/event_loop.h				\
wampcc/helper.h wampcc/http_parser.h wampcc/io_loop.h wampcc/json.h				\
wampcc/json_internals.h wampcc/kernel.h wampcc/log_macros.h wampcc/platform.h	\
wampcc/protocol.h wampcc/pubsub_man.h wampcc/rawsocket_protocol.h				\
wampcc/rpc_man.h wampcc/socket_address.h wampcc/ssl.h wampcc/ssl_socket.h		\
wampcc/tcp_socket.h wampcc/types.h wampcc/utils.h wampcc/version.h				\
wampcc/wampcc.h wampcc/wamp_router.h wampcc/wamp_session.h						\
wampcc/websocketpp_impl.h wampcc/websocket_protocol.h


